--- a/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
@@ -291,3 +291,8 @@ span.personaje{
     width: 100%;
     height: 100%;
 }
+
+.uk-card-footer .uk-width-expand img{
+    width: 50px;
+    height: 50px;
+}
