--- a/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
+++ b/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
@@ -299,6 +299,26 @@ div>ul>li{
     text-align: center;
 }
 
+/*.caja-img{
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.pregunta-detonadora{
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+    opacity: 1;
+}
+
+.pregunta-detonadora:hover .caja-img{
+    cursor: pointer;
+    opacity: 1;
+}*/
 
 
 @media screen and (max-width: 1024px){
