--- a/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
+++ b/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
@@ -318,6 +318,7 @@ div>ul>li{
     height: 200px;
     background: url("#{resource['img/alumno/pop-art/nube1.svg']}") no-repeat center center/100% 100%;
     color: black;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
