--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -83,6 +83,30 @@ body{
     margin-left: -4px;
     /*z-index: 9999 ;*/
 }
+#menu .uk-offcanvas-bar{
+    overflow-y: visible;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    flex-wrap: wrap;
+}
+
+#menu .uk-offcanvas-bar .uk-dropdown.user-hamburguesa{
+    max-height: 50px;
+    min-width: 100px;
+    padding: 3px;
+
+}
+#menu  div > div{
+    bottom: 10px;
+}
+
+.uk-offcanvas-bar .uk-dropdown.user-hamburguesa a{
+   color: var(--turquesa-primary-color);
+    font-weight: bold;
+
+}
 .left-content-box {
     padding: 0.75rem 20px;
     border-top: 1px solid rgba(255,255,255,0.06);
