--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
@@ -13,6 +13,7 @@
     <h:outputStylesheet library="css" name="letra.css"/>
     <h:outputStylesheet library="css" name="navegacion.css"/>
     <h:outputStylesheet library="css" name="esquadron.css"/>
+    <h:outputStylesheet library="css" name="/profesor/dashboard-profesor.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </h:head>
