--- a/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/grafica.css
@@ -86,10 +86,11 @@
     /*display: inline-block;*/
 }
 .graficas p > span{
-    background-color: #00A8EC;
-    border-radius: 8px;
     display: inline-block;
     padding: 0 5px;
+    border:1.3px solid #00A8EC;
+    border-radius: 5px;
+    color: black;
 }
 .graficas > div{
     /*background-color: #999999;*/
