--- a/tecolotl-web/src/main/webapp/resources/css/spinner.css
+++ b/tecolotl-web/src/main/webapp/resources/css/spinner.css
@@ -3,11 +3,12 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(51, 74, 88);
+  /*background-color: rgb(51, 74, 88);*/
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 38%, rgba(0,0,51,1) 63%);
   z-index: 9999;
   top: 0;
   left: 0;
-
 }
 
 .spinner svg{
