--- a/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
+++ b/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
@@ -314,15 +314,17 @@ div>ul>li{
 }
 
 .posicion{
+    /*background: url("#{resource['img/alumno/pop-art/nube1.svg']}") no-repeat center center/100% 100%;*/
+    background: linear-gradient(to right, deeppink, rebeccapurple);
     width: 100%;
     height: 200px;
-    background: url("#{resource['img/alumno/pop-art/nube1.svg']}") no-repeat center center/100% 100%;
-    color: black;
-    font-weight: bold;
+    color: white;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 
 @media screen and (max-width: 1024px){
     .A1>div>div>.uk-card-footer > div > div > span{
