--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -13,12 +13,13 @@ ul > li > span {
     font-family: 'Sniglet', "Arial Black", serif;
     color: black !important;
     text-transform: capitalize !important;
-    border: 3px solid lightseagreen;
-    width: 60px;
+    border: 3px solid var(--turquesa-primary-color);
     height: 28px;
     border-radius: 5px;
     text-align: center;
     padding-top: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #graficas > div > span{
