--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -32,7 +32,7 @@ ul > li > span {
 }
 
 .uk-modal-dialog .uk-modal-body{
-    border:3px solid #0e6dcd;
+    border-bottom:3px solid #0e6dcd;
 }
 .boton-reporte{
     display: flex;
