--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -13,6 +13,7 @@
     color:black;
     font-weight: bold;
     font-size: 20px;
+    padding-top: 10px;
 }
 .contenedor-oraciones{
     height: auto;
