--- a/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/admin-alumnos.css
@@ -86,7 +86,28 @@ div > div > div > div + div + div + div + div + div > img:hover{
     flex-wrap: wrap;
 }
 
-.botones > .boton-escuadron-base{
+.boton-maestro-base{
+    background-color: var(--color-nav-primary);
+    padding: 8px 25px;
+    color:white;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 20px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.boton-maestro-base:hover{
+    text-decoration: none;
+    background-color: var(--color-barra-nav);
+    color: white;
+}
+
+.botones > .boton-maestro-base{
     margin-left: 15px;
 }
 #tabla-vacia > div:first-child{
