--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -43,7 +43,7 @@ ul > li > span {
 }
 
 .borde-menu{
-    border: 3px solid var(--turquesa-primary-color);
+    border: 3px solid var(--color-nav-primary);
     height: 28px;
     width: 130px;
     border-radius: 5px;
@@ -51,4 +51,8 @@ ul > li > span {
     padding-top: 7px;
     margin-top: 19px;
     left: 373%;
+}
+
+.borde-menu > form > a{
+    color: #1665B4;
 }
